--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "SOFKATALOGOFRONT",
+  "name": "ProjectSofka",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/home.js",
+  "main": "src/projectController/ProjectController.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack -w"
