--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "SOFKATALOGOFRONT",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/home.js",
+  "main": "./src/HTMLController.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack -w"
