--- a/src/data/ProjectData.json
+++ b/src/data/ProjectData.json
@@ -8,7 +8,14 @@
             "startDate": "2016-08-12",
             "endDate": "2016-08-12",
             "image": "http://www.sofka.com.co/wp-content/uploads/sofka-pretrinum-logo-ajax.png",
-            "client": "Sofka",
+            "client": {
+                "name": "alpina",
+                "nit": "860.025.900-2",
+                "size": "5.500-10.000 empleados",
+                "sector": "Alimentos y bebidas",
+                "image": "https://cdn.advantis.co/wp-content/uploads/2018/06/Alpina-864x675.png",
+                "webPage": "https://www.alpina.com/"
+            },
             "technologies": [
                 {
                     "name": "Javascript",
@@ -54,7 +61,11 @@
             "startDate": "2015-01-15",
             "endDate": "2018-01-15",
             "image": "http://www.sofka.com.co/wp-content/uploads/hibot-1.png",
-            "client": "Sofka",
+            "client": {
+                "name": "JUAN ESTEBAN MONTOYA",
+                "id": "1.038.435,932",
+                "image": "https://examapplication.com/public/img/user.png"
+            },
             "technologies": [
                 {
                     "name": "Java",
@@ -100,7 +111,14 @@
             "startDate": "2017-08-05",
             "endDate": "2019-08-15",
             "image": "http://www.sofka.com.co/wp-content/uploads/frow-3.png",
-            "client": "Sofka",
+            "client": {
+                "name": "sura",
+                "nit": "900.847.380",
+                "size": "51-200 empleados",
+                "sector": "Servicios Financieros",
+                "image": "https://mazkomazda.com/wp-content/uploads/2018/04/SURA_logo-16-9-728-2.jpg",
+                "webPage": "https://www.segurossura.com.co"
+            },
             "technologies": [
                 {
                     "name": "C#",
